# FireRescueManager

./: CMakeLists.txt  app.cpp
src/Accident/: Accident.cpp  Accident.hpp
src/CentralUnit/: CentralUnit.cpp  CentralUnit.hpp
src/Container/: Container.hpp  Iterator.hpp
src/FireEngine/: FireEngine.cpp  FireEngine.hpp
src/FireRescueUnit/: FireRescueUnit.cpp  FireRescueUnit.hpp
src/Observer/: FireEngineObserver.cpp  FireEngineObserver.hpp  Observer.hpp
src/PointWGS/: PointWGS.cpp  PointWGS.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp
src/State/: State.hpp
src/Strategy/: FireStrategy.hpp  LocalThreatStrategy.hpp  Strategy.hpp
